--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@ PROD_DATABASE_PASSWORD=
 PROD_DATABASE_USER=postgres
 PROD_DATABASE_ENDPOINT=
 
-GOOGLE_KEY=
-GOOGLE_SECRET=
+GOOGLE_KEY=337689275045-b16pus2ulvgvv1npr9orhvl1of220s13.apps.googleusercontent.com
+GOOGLE_SECRET=6m-5CmYgVJ2tR_9QXz92vSf2
 
 # FOR S3 BUCKET FOR IMAGE STORAGE
 S3_AWS_ACCESS_KEY=
