--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "aws-sdk": "^2.467.0",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
+    "chokidar": "^3.0.2",
     "concurrently": "^4.1.0",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
@@ -41,6 +42,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "multer-s3": "^2.9.0",
+    "npm-run-all": "^4.1.5",
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth2": "^0.2.0",
