--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.4.2",
+    "@material-ui/icons": "^4.4.1",
     "chokidar-cli": "^2.0.0",
+    "classnames": "^2.2.6",
+    "eslint": "^6.4.0",
+    "immutability-helper": "^3.0.1",
     "node-sass-chokidar": "^1.3.5",
     "postcss-cli": "^6.1.3",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.0.1",
+    "redux": "^4.0.4",
+    "redux-api-middleware": "^3.0.1",
+    "redux-form": "^8.2.6"
   },
   "devDependencies": {
+    "eslint-plugin-import": "^2.18.2",
     "react-scripts": "3.1.1"
   },
   "scripts": {
