--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,15 @@
     "node-sass-chokidar": "^1.3.5",
     "postcss-cli": "^6.1.3",
     "prop-types": "^15.7.2",
+    "query-string": "^6.9.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
     "redux-api-middleware": "^3.0.1",
-    "redux-form": "^8.2.6"
+    "redux-form": "^8.2.6",
+    "shortid": "^2.2.15"
   },
   "devDependencies": {
     "eslint-plugin-import": "^2.18.2",
