--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.4.1",
     "chokidar-cli": "^2.0.0",
     "classnames": "^2.2.6",
+    "env-path": "^1.0.7",
     "eslint": "^6.4.0",
     "immutability-helper": "^3.0.1",
     "node-sass-chokidar": "^1.3.5",
@@ -29,6 +30,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:dev": "env-path -p .env.development yarn node node_modules/react-scripts/scripts/build.js",
+    "build:staging": "env-path -p .env.staging yarn node node_modules/react-scripts/scripts/build.js",
     "test": "react-scripts test",
     "test-cov": "react-scripts test --coverage --watchAll=false --coverageDirectory=output/coverage/jest",
     "eject": "react-scripts eject",
