--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "multer-s3": "^2.9.0",
+    "node-geocoder": "^3.25.0",
     "npm-run-all": "^4.1.5",
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
