--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.2.6",
     "env-path": "^1.0.7",
     "eslint": "^6.4.0",
+    "google-map-react": "^1.1.5",
     "immutability-helper": "^3.0.1",
     "node-sass-chokidar": "^1.3.5",
     "postcss-cli": "^6.1.3",
