add snyk policy

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "fs": "^0.0.1-security",
-    "helmet": "^3.21.0",
+    "helmet": "3.21.1",
     "http": "^0.0.0",
     "https": "^1.0.0",
     "knex": "^0.19.5",
@@ -54,6 +54,7 @@
     "pg": "^7.12.1",
     "request": "^2.88.0",
     "serve-favicon": "^2.5.0",
+    "snyk": "^1.280.1",
     "travis": "^0.1.1",
     "util": "^0.12.1",
     "uuid": "^3.3.2",
@@ -93,5 +94,6 @@
   },
   "engines": {
     "node": "10.15.3"
-  }
+  },
+  "snyk": true
 }
