--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build:dev": "env-path -p .env.development yarn node node_modules/react-scripts/scripts/build.js",
-    "build:staging": "env-path -p .env.staging yarn node node_modules/react-scripts/scripts/build.js",
+    "build:staging": "env-path -p .env.staging yarn build",
     "test": "react-scripts test",
     "test-cov": "react-scripts test --coverage --watchAll=false --coverageDirectory=output/coverage/jest",
     "eject": "react-scripts eject",
