--- a/client/package.json
+++ b/client/package.json
@@ -26,13 +26,13 @@
   },
   "devDependencies": {
     "eslint-plugin-import": "^2.18.2",
-    "react-scripts": "3.1.1"
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build:dev": "env-path -p .env.development yarn node node_modules/react-scripts/scripts/build.js",
-    "build:staging": "env-path -p .env.staging yarn build",
+    "build:staging": "env-path -p .env.staging yarn node node_modules/react-scripts/scripts/build.js",
     "test": "react-scripts test",
     "test-cov": "react-scripts test --coverage --watchAll=false --coverageDirectory=output/coverage/jest",
     "eject": "react-scripts eject",
