--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "sass": "cd client && yarn dev",
     "dev": "concurrently --kill-others-on-fail \"yarn dev-server\" \"yarn dev-client\" \"yarn sass\"",
     "snyk-protect": "snyk protect",
-    "prepare": "yarn run snyk-protect",
-    "heroku-postbuild": "cd client && yarn install && yarn build:staging"
+    "prepare": "yarn run snyk-protect"
   },
   "repository": {
     "type": "git",
