--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "multer": "^1.4.1",
     "multer-s3": "^2.9.0",
     "node-geocoder": "^3.25.0",
+    "node-sass": "^6.0.1",
     "npm-run-all": "^4.1.5",
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
@@ -93,7 +94,7 @@
     }
   },
   "engines": {
-    "node": "13.7.0"
+    "node": "14.16.0"
   },
   "snyk": true
 }
