--- a/client/package.json
+++ b/client/package.json
@@ -5,13 +5,14 @@
   "dependencies": {
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
+    "aws-sdk": "^2.1028.0",
     "chokidar-cli": "^2.0.0",
     "classnames": "^2.2.6",
     "env-path": "^1.0.7",
     "google-map-react": "^1.1.5",
     "immutability-helper": "^3.0.1",
-    "node-sass-chokidar": "^1.3.5",
-    "postcss-cli": "^7.0.0",
+    "node-sass-chokidar": "^1.5.0",
+    "postcss-cli": "^9.0.2",
     "prop-types": "^15.7.2",
     "query-string": "^6.9.0",
     "react": "^16.9.0",
@@ -22,7 +23,7 @@
     "redux-api-middleware": "^3.0.1",
     "redux-form": "^8.2.6",
     "shortid": "^2.2.15",
-    "snyk": "^1.316.1"
+    "snyk": "^1.760.0"
   },
   "devDependencies": {
     "eslint-plugin-import": "^2.18.2",
