--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.4.2",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.4.1",
     "aws-sdk": "^2.1028.0",
     "chokidar-cli": "^2.0.0",
@@ -13,6 +13,7 @@
     "immer": "^9.0.6",
     "immutability-helper": "^3.0.1",
     "node-sass-chokidar": "^1.5.0",
+    "postcss": "^8.3.11",
     "postcss-cli": "^9.0.2",
     "prop-types": "^15.7.2",
     "query-string": "^6.9.0",
